@@ -24,6 +24,7 @@
 * Added a special case for forward-declared by-value structs in the DX12 backend
 * Added support for typedefs with an explicit type
 * Fixed backend headers to use backends/ folder for includes, and added some missing headers
+* Added --backend-include-dir to allow specifying the path where backend header files are found
 
 --- v0.06
 
